--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         <aside class="menu-lateral">
             <ul>
                 <li>
-                    <a href="#" target="_blank">
+                    <a href="https://github.com/Hiiqs" target="_blank">
                         <img src="assets/images/github.svg" alt="ícone GitHub" class="icone">
                     </a>
                 </li>
                 <li>
-                    <a href="" target="_blank">
+                    <a href="https://www.linkedin.com/in/henrique-p-94741a13b/" target="_blank">
                         <img src="assets/images/linkedin-in.svg" alt="ícone LinkedIn" class="icone">
                     </a>
                 </li>
